# mecanum_robot

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  joint_names_mecanum_robot.yaml  local_costmap_params.yaml
launch/: amcl.launch  gmapping.launch  move_base.launch  navigation.launch  robot_description.launch  rviz.launch  world.launch
maps/: updated_world.pgm  updated_world.yaml
meshes/: chassis.STL  front_left_wheel.STL  front_right_wheel.STL  rear_left_wheel.STL  rear_right_wheel.STL
rviz/: gmapping.rviz  mecanum_robot.rviz  navigation.rviz
scripts/: move_goal.py
urdf/: camera_new.xacro  mecanum_robot.gazebo  mecanum_robot.xacro
world/: updated_world.world
world/updated_world/: model.config  model.sdf
