<?xml version="1.0"?>

<package format="2">
  <name>mecanum_robot</name>
  <version>0.0.0</version>
  <description>The mecanum_robot package</description>

  <maintainer email="oben-m@todo.todo">oben-m</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>rospy</depend>
  
</package>
